--- a/app/src/main/res/layout/albam_layout.xml
+++ b/app/src/main/res/layout/albam_layout.xml
@@ -2,12 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_margin="@dimen/dp10"
+    android:layout_height="@dimen/dp200">
 
     <ImageView
         android:id="@+id/ivImage"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp200"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
