--- a/app/src/main/res/layout/fragment_album_details.xml
+++ b/app/src/main/res/layout/fragment_album_details.xml
@@ -1,14 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.AlbumDetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/imBackground"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp300"
+            android:text="@string/hello_blank_fragment"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#4F000000"
+            app:layout_constraintBottom_toBottomOf="@id/imBackground"
+            app:layout_constraintEnd_toEndOf="@id/imBackground"
+            app:layout_constraintStart_toStartOf="@id/imBackground"
+            app:layout_constraintTop_toTopOf="@id/imBackground" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp18"
+            android:text="@string/app_name"
+            android:textColor="@color/black"
+            android:textSize="@dimen/dp25"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tvSubTitle"
+            app:layout_constraintEnd_toEndOf="@id/imBackground"
+            app:layout_constraintStart_toStartOf="@id/imBackground" />
+
+        <TextView
+            android:id="@+id/tvSubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp80"
+            android:text="sub title "
+            android:textColor="@color/black"
+            android:textSize="@dimen/dp25"
+            app:layout_constraintBottom_toBottomOf="@id/imBackground"
+            app:layout_constraintEnd_toEndOf="@id/imBackground"
+            app:layout_constraintStart_toStartOf="@id/imBackground" />
+
+        <ImageView
+            android:id="@+id/ivakcArro"
+            android:layout_width="@dimen/dp25"
+            android:layout_height="@dimen/dp25"
+            android:layout_marginStart="@dimen/dp18"
+            android:layout_marginTop="@dimen/dp10"
+            android:src="@drawable/ic_baseline_arrow_back_ios_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tvTabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/imBackground" />
+
+        <TextView
+            android:text="@string/appbar_scrolling_view_behavior"
+            android:layout_margin="@dimen/dp20"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tvTabs" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.core.widget.NestedScrollView>
