--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,12 @@
     <dimen name="dp15">15dp</dimen>
     <dimen name="dp200">200dp</dimen>
     <dimen name="dp25">25dp</dimen>
+    <dimen name="dp400">400dp</dimen>
+    <dimen name="dp300">300dp</dimen>
+    <dimen name="dp50">50dp</dimen>
+    <dimen name="dp100">100dp</dimen>
+    <dimen name="dp80">80dp</dimen>
+    <dimen name="dp20">20dp</dimen>
+    <dimen name="dp40">40dp</dimen>
+    <dimen name="dp30">30dp</dimen>
 </resources>
