--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -39,6 +39,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <ImageView
+        android:id="@+id/switchCount"
+        android:layout_width="@dimen/dp30"
+        android:layout_height="@dimen/dp30"
+        android:src="@drawable/ic_baseline_arrow_circle_down_24"
+        app:layout_constraintBottom_toBottomOf="@id/tvChooseStartWith"
+        app:layout_constraintStart_toEndOf="@+id/tvChooseStartWith"
+        app:layout_constraintTop_toTopOf="@id/tvChooseStartWith" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTagsList"
         android:layout_width="match_parent"
